  - new infoboxes for radio frequencies, including setting the frequencies
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 and MIPS CPUs
* Kobo
  - support Kobo Glo HD
* Raspberry Pi
  - resizable mouse cursor

Version 6.8.14 - not yet released
* Android
  - compatibility with Android 9

Version 6.8.13 - 2020/04/08
* devices
  - LX: fix buffer overflow
  - LX: support downloading flights from LX7000 Pro IGC
* Android
  - use the full screen on very narrow/wide displays
* Kobo
  - fix build failure with GCC 9
  - switch from glibc to Musl
* WinCE
  - build with GCC 9
* allow the hyphen in XCI files

Version 6.8.12 - 2019/04/30
* weather
  - update source URLs for METARs and TAFs (https://)
* Android
  - increase targetSdkVersion to 26 (required by Google Play)
  - request storage and GPS permissions on Android 6+
  - fix crash when permission to use GPS is revoked
  - fix notification on Android 8+
* Task Editor
  - fixed task editor crashes (Ticket 3930).
* devices
  - IMI: raise max payload size to 2kB
* fix IGC logger crash when no date is available

Version 6.8.11 - 2018/08/18
* terrain
  - fix yet another crash bug (libJasper)
* Android
  - fix crash on Android 8 due to overzealous seccomp filter

Version 6.8.10 - 2017/10/07
* terrain
  - fix crash bug (6.8.9 regression)

Version 6.8.9 - 2017/10/05
* terrain
  - fix several crash bugs
* fix two crash bugs
* Kobo
  - fix internet access (#3869)
  - support for Kobo Glo HD Refurbished

Version 6.8.8 - 2017/09/09
* data files
  - support "GSEC" in OpenAir files
* weather
  - update source URLs for METARs and TAFs
* devices
  - CAI302: fix waypoint download (#3830)
  - IMI: fix PGRMZ parsing (was interpreted as altitude, now is pressure altitude)
  - LX: fix Nano 3 task declaration (#3858)
* Kobo
  - support for Kobo Aura Edition 2